Loic Buckwell - 12/02/2021

Bien le bonjour cher partenaire, que je ne nommerai pas ici pour des soucis
evidents de confidentialite.

Je tiens tout d'abord a m'excuser, j'ai egare le premier fichier que tu avais
cree, raison pour laquelle j'en joins un nouveau.
Mais sans plus tarder, entrons dans le vif du sujet.

Ce que j'ai fait:

- Mise en place de la construction du dfa via l'algorithme "subset construction"
(work in progress, ca compile mis ca marche pas encore)
- Implique de nouvelles structures de donnees map / set

Ce que j'ai prevu de faire:
- Normer
- Commenter

Merde, je voulais faire un msg plus complet mais je dois partir j'ai pas reservé je vais me faire TIG !!!
A bientôt !